CVS

* Splitting graphs is now default. Contribution from Doug Farley.

0.7 2005-10-27

* Another significant performance increase by eval of rules only once
* Header flush bug fixed

0.6 2005-10-18

* Only using RRD perl modules is supported. Removed binary rrdtool 
  dependency.
* Added support for perfdata log file for performance increase.  
  Contribution from Alex.

0.5 2005-06-22

* Color bug fixed
* Support for customized heartbeat

0.4 2005-04-22

* Better color handling
* New webpage design
* Added rrdopts feature
* Several bug fixes

0.3 2004-12-04

* Added logging of system errors
* Added customized graph sizes feature
* Several bug fixes

0.2 2004-10-14

* Added documentation.
* Delimiter bug fixed.

0.1 2004-08-03

* Initial release