@@ -1,4 +1,4 @@
-# File:    $Id: nagiosgraph.conf,v 1.6 2005/10/08 05:55:08 sauber Exp $
+# File:    $Id: nagiosgraph.conf,v 1.7 2006/04/05 12:37:11 sauber Exp $
 # Author:  (c) Soren Dossing, 2005
 # License: OSI Artistic License
 #          http://www.opensource.org/licenses/artistic-license.php
@@ -29,3 +29,6 @@ heartbeat = 600
 
 # Location of performance data log file. Comment out it not used.
 perflog = /var/spool/nagios/perfdata.log
+
+# Stylesheet - added to head of show.cgi. Comment out if not used
+stylesheet = /nagios/stylesheets/nagiosgraph.css
