@@ -1,0 +1,27 @@
+body#nagiosgraph {
+	color: #000000;
+	background-color: #BBBBFF;
+}
+h1 {
+	font-size: x-large;
+}
+div.graphs, div#footer {
+	clear: both;
+}
+h2 {
+	font-size: large;
+	padding-top: 1em;
+	margin-bottom: 0.5em;
+	clear: left;
+}
+img {
+	float: left;
+	margin-left: 15px;
+	margin-bottom: 1em;
+	padding-right: 10px;
+}
+div.graph_description {
+	/* to valign the text */
+	margin-top: 0;
+	padding-top: 70px;
+}
