@@ -1,5 +1,6 @@
 CVS
 
+* Use stylesheet. Contribution from Ton Voon.
 * Splitting graphs is now default. Contribution from Doug Farley.
 
 0.7 2005-10-27
